previous commit fixed x-axis body overlap issue. Now testing mobile fullscreen height bug fix. App.css

--- a/src/App.css
+++ b/src/App.css
@@ -2210,7 +2210,7 @@ hr {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: block;
     position: fixed;
     z-index: 1;
